[gd_scene load_steps=9 format=3 uid="uid://bfm4a862uxyag"]

[ext_resource type="Texture2D" uid="uid://dnw1xbg83c5pu" path="res://addons/inventory_editor/icons/Add.png" id="1"]
[ext_resource type="Texture2D" uid="uid://dhc2m24gbwp23" path="res://addons/inventory_editor/icons/Item.png" id="2"]
[ext_resource type="Script" path="res://addons/inventory_editor/scenes/items/InventoryItemData.gd" id="3"]
[ext_resource type="PackedScene" path="res://addons/inventory_editor/scenes/items/InventoryItemDataPath.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://ov647hx6yjxa" path="res://addons/ui_extensions/dropdown/Dropdown.tscn" id="5_ek66t"]
[ext_resource type="PackedScene" uid="uid://coiuo7hagef4s" path="res://addons/inventory_editor/scenes/items/InventoryItemDataProperty.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://bpng247b4f7aa" path="res://addons/inventory_editor/scenes/items/InventoryItemDataPathScene.tscn" id="8"]
[ext_resource type="Texture2D" uid="uid://bsbdtbgy66s7k" path="res://addons/inventory_editor/icons/File.png" id="9"]

[node name="InventoryItemData" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("3")

[node name="MarginData" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="MarginData"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="MarginData/VBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="MarginData/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxStack" type="HBoxContainer" parent="MarginData/VBox/HBox/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginData/VBox/HBox/VBox/HBoxStack"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Stacksize"

[node name="Stacksize" type="LineEdit" parent="MarginData/VBox/HBox/VBox/HBoxStack"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxStacks" type="HBoxContainer" parent="MarginData/VBox/HBox/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginData/VBox/HBox/VBox/HBoxStacks"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Max Stacks"

[node name="Stacks" type="LineEdit" parent="MarginData/VBox/HBox/VBox/HBoxStacks"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxMaxAmount" type="HBoxContainer" parent="MarginData/VBox/HBox/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginData/VBox/HBox/VBox/HBoxMaxAmount"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Max Amount"

[node name="MaxAmount" type="LineEdit" parent="MarginData/VBox/HBox/VBox/HBoxMaxAmount"]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="HBoxIcon" type="HBoxContainer" parent="MarginData/VBox/HBox/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginData/VBox/HBox/VBox/HBoxIcon"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Icon"

[node name="Icon" parent="MarginData/VBox/HBox/VBox/HBoxIcon" instance=ExtResource("5")]
layout_mode = 2

[node name="HBoxScene" type="HBoxContainer" parent="MarginData/VBox/HBox/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginData/VBox/HBox/VBox/HBoxScene"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Scene"

[node name="Scene" parent="MarginData/VBox/HBox/VBox/HBoxScene" instance=ExtResource("8")]
layout_mode = 2

[node name="Open" type="Button" parent="MarginData/VBox/HBox/VBox/HBoxScene"]
layout_mode = 2
icon = ExtResource("9")

[node name="HBoxDescription" type="HBoxContainer" parent="MarginData/VBox/HBox/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginData/VBox/HBox/VBox/HBoxDescription"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 5
text = "Description"

[node name="Description" type="TextEdit" parent="MarginData/VBox/HBox/VBox/HBoxDescription"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Dropdown" parent="MarginData/VBox/HBox/VBox/HBoxDescription" instance=ExtResource("5_ek66t")]
layout_mode = 2

[node name="VBoxIcon" type="VBoxContainer" parent="MarginData/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginData/VBox/HBox/VBoxIcon"]
layout_mode = 2
text = "Icon"

[node name="Texture" type="TextureRect" parent="MarginData/VBox/HBox/VBoxIcon"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginData/VBox/HBox/VBoxIcon"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginData/VBox"]
layout_mode = 2

[node name="HBoxAdd" type="HBoxContainer" parent="MarginData/VBox"]
layout_mode = 2

[node name="Add" type="Button" parent="MarginData/VBox/HBoxAdd"]
layout_mode = 2
icon = ExtResource("1")

[node name="Label" type="Label" parent="MarginData/VBox/HBoxAdd"]
layout_mode = 2
text = "Properties"

[node name="HBoxNames" type="HBoxContainer" parent="MarginData/VBox"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginData/VBox/HBoxNames"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name"

[node name="Value" type="Label" parent="MarginData/VBox/HBoxNames"]
layout_mode = 2
size_flags_horizontal = 3
text = "Value"

[node name="HSeparator" type="HSeparator" parent="MarginData/VBox"]
layout_mode = 2

[node name="VBoxProperties" type="VBoxContainer" parent="MarginData/VBox"]
layout_mode = 2

[node name="InventoryItemDataProperty" parent="MarginData/VBox/VBoxProperties" instance=ExtResource("6")]
layout_mode = 2
